0-Demo-Files/host-vs-path-based-routing/api-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-app
  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
      - name: api-app
        image: hashicorp/http-echo
        args:
          - "-text=API Service"
        ports:
        - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: api-app
  ports:
    - port: 80
      targetPort: 5678
